syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "net.atos.daf.ct2.pushnotificationservice";

package pushnotificationservice;

service PushNotificationService {
  rpc GetAlertMessageStream (google.protobuf.Empty) returns (stream AlertMessageData);
  rpc GetEligibleAccountForAlert (AccountClientMapping) returns (AccountClientMapping);
}

message AlertMessageData {
	int32 Id=1;
	string Tripid=2;
	string Vin=3;
	string CategoryType=4;
	string Type=5;
	string Name=6;
	int32 Alertid=7;
	double ThresholdValue=8;
	string ThresholdValueUnitType=9;
	double ValueAtAlertTime=10;
	double Latitude=11;
	double Longitude=12;
	int64 AlertGeneratedTime=13;
	int64 MessageTimestamp=14;
	int64 CreatedAt=15;
	int64 ModifiedAt=16;
	ResponseCode Code=17;
    string message = 18;
	string UrgencyLevelType = 19;
	int32 VehicleGroupId = 20;
	string VehicleGroupName = 21;
	string VehicleRegNo = 22;
	string VehicleName = 23;
}
enum ResponseCode{
  None = 0;
  Success = 200;
  Failed = 400;
  Conflict = 409;
  NotFound = 404;
  InternalServerError = 500;
}

message AccountClient{
int32 AccountId = 1;
int32 OrgId = 2;
string HubClientId = 3;
}

message AccountClientMapping{
repeated AccountClient AccountClient = 1;
AlertMessageData alertMessageData = 2;
ResponseCode Code = 3;
string message = 4;
}